[package]
description = "Parser for the NTP protocol"
license = "MIT/Apache-2.0"
keywords = ["NTP","time","protocol","parser","nom"]
homepage = "https://github.com/rusticata/ntp-parser"
repository = "https://github.com/rusticata/ntp-parser.git"
name = "ntp-parser"
version = "0.6.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "7.0"
nom-derive = "0.10"
libm = { version = "0.2", optional = true }

[badges]
travis-ci = { repository = "rusticata/ntp-parser" }

[features]
default = ["std"]
alloc = ["nom/alloc", "nom-derive/alloc"]
std = ["alloc", "nom/std", "nom-derive/std" ]
